# vocab_quiz

./: .gitignore  Cargo.toml  README.md
src/: constants.rs  dict-list.html  index.html  main.rs  new-user.html  practice.html  question.html  titlebar.hmtl  user-list.html  words.rs  xml.rs
src-tauri/: .gitignore  Cargo.toml  bob.usr  dude.usr  tauri.conf.json
src-tauri/capabilities/: android.json  desktop.json  migrated.json
src-tauri/src/: constants.rs  error.rs  lib.rs  main.rs
src-tauri/src/program/: app.rs  filemanager.rs  loader.rs  mod.rs  user.rs
src-tauri/src/tools/: crypt_string.rs  dict_map.rs  mod.rs  u8_buffer.rs  weighted_list.rs  xml.rs
src-tauri/src/words/: dictionary.rs  knowledge.rs  mod.rs  word.rs
src/css/: dict-list.css  new-user.css  question.css  style.css  titlebar.css  user-list.css
src/js/: dict-list.js  main.js  new-user.js  practice.js  question.js  splash.js  titlebar.js  user-list.js
src/program/: app.rs  mod.rs  user.rs
src/tools/: dict_map.rs  mod.rs
src/words/: dictionary.rs  knowledge.rs  mod.rs  word.rs  word_error.rs
