[package]
name = "vocab_quiz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
const_format = "0.2.30"
heapless = "0.7.16"
postcard = "1.0.2"
quick-xml = "0.26.0"
serde = { version = "1.0.145", features = ["derive"] }
xmltree = "0.10.3"
