[package]
name = "vocab_quiz"
version = "0.0.0"
description = "A Tauri App"
authors = ["Brian Amsler"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.1", features = ["api-all"] }
postcard = "1.0.2"
xmltree = "0.10.3"
const_format = "0.2.30"
chrono = "0.4.22"
rand = "0.8.5"
once_cell = "1.16.0"
thiserror = "1.0.37"
serialized_version_manager = { git = "https://github.com/BrianPAmsler/serialized_version_manager.git", version = "0.1.0" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
