[package]
name = "vocab_quiz"
version = "0.0.0"
description = "A Tauri App"
authors = ["Brian Amsler"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

[lib]
name = "vocab_quiz_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [] }
postcard = "1.0.2"
xmltree = "0.10.3"
const_format = "0.2.30"
chrono = "0.4.22"
rand = "0.8.5"
once_cell = "1.16.0"
thiserror = "1.0.37"
struct_version_manager = { git = "https://github.com/BrianPAmsler/struct_version_manager.git", version = "0.1.0" }
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2.0.0-alpha.2"
tauri-plugin-os = "2"
tauri-plugin-http = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
